--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "serverStart": "node server.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
@@ -13,18 +14,20 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "cors": "^2.8.5",
     "expo": "~51.0.39",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-peerjs": "^1.0.4",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "3.31.1",
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-web": "~0.19.10",
     "react-native-webrtc": "^124.0.4",
     "react-native-webrtc-web-shim": "^1.0.7",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
