--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -59,3 +59,5 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 expo.useLegacyPackaging=false
 
 expo.jsEngine=jsc
+android.minSdkVersion=24
+android.extraMavenRepos=[]
