--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serverStart": "node server.js"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^9.0.0",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -16,6 +17,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "cors": "^2.8.5",
     "expo": "~51.0.39",
+    "expo-dev-client": "~4.0.29",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,7 +27,7 @@
     "react-native-screens": "3.31.1",
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-web": "~0.19.10",
-    "react-native-webrtc": "^124.0.4",
+    "react-native-webrtc": "^118.0.7",
     "react-native-webrtc-web-shim": "^1.0.7",
     "socket.io-client": "^2.3.0"
   },
