--- a/package.json
+++ b/package.json
@@ -10,26 +10,22 @@
   },
   "dependencies": {
     "@config-plugins/react-native-webrtc": "^9.0.0",
-    "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
-    "cors": "^2.8.5",
-    "expo": "~51.0.39",
-    "expo-dev-client": "~4.0.29",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.7",
+    "expo-dev-client": "^5.0.2",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-peerjs": "^1.0.4",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "3.31.1",
-    "react-native-swiper-flatlist": "^3.2.5",
-    "react-native-web": "~0.19.10",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-webrtc": "^118.0.7",
     "react-native-webrtc-web-shim": "^1.0.7",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
