--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-screens": "~4.1.0",
     "react-native-webrtc": "^118.0.7",
     "react-native-webrtc-web-shim": "^1.0.7",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
