--- a/app.json
+++ b/app.json
@@ -14,7 +14,11 @@
     "ios": {
       "supportsTablet": true,
       "bitcode": false,
-      "bundleIdentifier": "com.soyalexd.pacientes"
+      "bundleIdentifier": "com.soyalexd.pacientes",
+      "infoPlist": { 
+        "NSCameraUsageDescription": "This app uses the camera to scan barcodes.", 
+        "NSMicrophoneUsageDescription": "This app uses the microphone to record audio." 
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -23,6 +27,7 @@
       },
       "package": "com.soyalexd.pacientes",
       "permissions": [
+        "CAMERA", "RECORD_AUDIO",
         "android.permission.ACCESS_NETWORK_STATE",
         "android.permission.CAMERA",
         "android.permission.INTERNET",
