--- a/eas.json
+++ b/eas.json
@@ -9,17 +9,21 @@
       "distribution": "internal",
       "ios": {
         "simulator": true
-      }
+      },
+      "env": { "NODE_OPTIONS": "--max-old-space-size=4096" }
     },
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": { "NODE_OPTIONS": "--max-old-space-size=4096" }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": { "NODE_OPTIONS": "--max-old-space-size=4096" }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": { "NODE_OPTIONS": "--max-old-space-size=4096" }
     }
   },
   "submit": {
